--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,8 @@
 	<script type="text/javascript" charset="utf-8">
 	  /*globals Raphael Element App io $merge */
 	  
+	  io.setPath('scripts/vendor');
+	  
 	  window.addEvent('domready', function() {
 	  
 	    // message received handler
