Fix for newer versions of webkit that now see svg element as event target on click.

--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
       }
       
   	  document.addEvent('click', function(e) {
-  	    if (e.target === document.documentElement) {
+  	    if (e.target === document.documentElement || e.target === App.TextCircle.paper.canvas) {
   	      var config = {
   	        x: e.page.x,
   	        y: e.page.y,
